fix container width -- now full bleed

--- a/carousel.css
+++ b/carousel.css
@@ -1,3 +1,6 @@
+.my-carousel-container {
+  width: 100%;
+}
 
 .carousel-inner {
   width: 100%;
@@ -6,6 +9,7 @@
 
 .carousel-item {
   height: 100%;
+  width: 100%;
 }
 
 .carousel-image {
